# arvel-ecommerce-kit

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  asgi.py  docker-compose.yml  pyproject.toml
.docker/keycloak/: realm-export.json
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin/src/: App.vue  api.ts  main.ts  oidc.ts  tokens.css
app/: enums.py  i18n.py  mcp_tools.py  media_url.py  schemas.py
app/auth/: admin_oidc.py  require.py
app/casts/: __init__.py  translations.py
app/console/: abandoned_carts.py  search_reindex.py
app/controllers/: account_controller.py  address_controller.py  admin_controller.py  admin_coupon_controller.py  admin_deal_controller.py  admin_media_controller.py  admin_product_controller.py  admin_rbac_controller.py  admin_taxonomy_controller.py  admin_user_controller.py  admin_variant_controller.py  ai_copy_controller.py  announcement_controller.py  auth_controller.py  banner_controller.py  cart_controller.py  catalog_controller.py  checkout_controller.py  deal_controller.py  dev_gateway_controller.py  invoice_controller.py  media_controller.py  notification_controller.py  order_access.py  payment_controller.py  review_controller.py  serializers.py  settings_controller.py  stock_alert_controller.py  wishlist_controller.py
app/events/: order_paid.py  order_placed.py  stock_changed.py
app/jobs/: deliver_gateway_webhook.py  fulfill_order.py
app/listeners/: dispatch_fulfillment.py  record_order_metrics.py  send_order_confirmation.py  send_password_reset.py
app/mail/: back_in_stock.py  order_confirmation.py  order_shipped.py  password_reset.py  verify_email.py
app/mcp_tools/: product_status.py
app/models/: __init__.py  address.py  banner.py  cart.py  cart_item.py  category.py  coupon.py  coupon_redemption.py  deal.py  media.py  newsletter_subscriber.py  order.py  order_item.py  payment.py  product.py  product_media.py  product_variant.py  refund.py  review.py  setting.py  shipping_method.py  stock_alert.py  tax_rate.py  user.py  vendor.py  webhook_event.py  wishlist_item.py
app/notifications/: __init__.py  back_in_stock_notification.py  order_shipped_notification.py
app/observers/: publish_observer.py
app/policies/: product_policy.py
app/providers/: app_provider.py
app/realtime/: broadcast_relay.py
app/services/: catalog_visibility_service.py  coupon_service.py  deal_service.py  product_image_service.py  refund_service.py  settings_service.py  shipping_service.py  stock_alert_service.py  tax_service.py
bootstrap/: app.py  middlewares.py  providers.py
config/: ai.py  app.py  auth.py  broadcasting.py  cache.py  database.py  features.py  filesystems.py  mail.py  openapi.py  queue.py  redis.py  search.py  services.py  session.py  telemetry.py
database/factories/: category_factory.py  product_factory.py  product_variant_factory.py  user_factory.py
database/migrations/: 0001_01_01_000000_create_users_table.py  0001_01_01_000001_create_personal_access_tokens_table.py  0001_01_01_000002_create_cache_table.py  0001_01_01_000003_create_jobs_table.py  0001_01_01_000004_create_notifications_table.py  0001_01_01_000005_create_failed_jobs_table.py  2026_06_30_000000_create_vendors_table.py  2026_06_30_000001_create_categories_table.py  2026_06_30_000002_create_products_table.py  2026_06_30_000003_create_product_variants_table.py  2026_06_30_000004_create_carts_table.py  2026_06_30_000005_create_cart_items_table.py  2026_06_30_000006_create_orders_table.py  2026_06_30_000007_create_payments_table.py  2026_06_30_000008_create_media_table.py  2026_06_30_000009_create_retrievable_views.py  2026_07_01_000001_create_permission_tables.py  2026_07_01_000002_create_activity_log_table.py  2026_07_01_000003_create_wishlist_items_table.py  2026_07_02_000002_create_coupons_table.py  2026_07_03_000001_create_deals_table.py  (+11 more)
docs/: operability.md  tour.md
frontend/: .prettierignore  DESIGN.md  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts
routes/: api.py  console.py  web.py
storefront/: index.html  package-lock.json  package.json  vite.config.ts
tests/: checkout_helpers.py  conftest.py  rbac_helpers.py  test_account.py  test_account_area.py  test_admin_authorization.py  test_admin_authz_uniformity.py  test_admin_binding_auth_ordering.py  test_admin_oidc.py  test_admin_taxonomy.py  test_admin_users.py  test_admin_variants.py  test_ai_features.py  test_auth.py  test_background.py  test_banners.py  test_broadcast_relay_deny.py  test_cart.py  test_cart_merge.py  test_catalog.py  test_catalog_visibility.py  test_checkout.py  test_coupons.py  test_customer_auth.py  test_database.py  test_deals.py  test_example.py  test_i18n.py  test_inventory.py  test_login_lockout.py  test_media.py  test_notifications.py  test_observability.py  test_operability.py  test_order_broadcast.py  test_payments.py  test_product_images.py  test_rbac_authorization.py  test_refunds.py  test_retrievability.py  (+6 more)
tools/: setup_bucket.py
(+143 files in other folders)
