[project]
name = "arvel-ecommerce-kit"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["arvel[standard,oidc,s3,telemetry,search,queue-amqp]"]

[project.optional-dependencies]
# aiosqlite: the suite runs on in-process sqlite (see conftest). uv doesn't reliably install it from
# arvel's nested `standard` self-extra under an editable path dep, so depend on it directly.
dev = [
    "aiosqlite>=0.22.1",
    "faker>=40.26.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    # the real-service integration tier (tests/integration, `make test-integration`)
    "testcontainers>=4.14.2",
]

[tool.pyright]
# the application code is strict-typed (mirrors arvel's own `include = ["src"]` stance — tests use
# the untyped litestar TestClient, so strict-typing them is noise, not signal).
include = ["app", "routes", "database", "bootstrap"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false  # third-party (faker, …) ship no stubs; our own code stays strict

[tool.uv.sources]
# Local dev tracks framework source directly (clone `arvel` as a sibling dir before `uv sync`) since
# this kit often depends on unreleased arvel changes. Docker installs the published version instead.
arvel = { path = "../arvel", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The default lane stays hermetic + fast (sqlite/array/memory); the Docker-backed integration tier
# is opt-in: `uv run pytest -m integration` / `make test-integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: real-service tests via testcontainers (needs Docker)",
]

[tool.hatch.metadata]
allow-direct-references = true
